--- a/style.css
+++ b/style.css
@@ -68,6 +68,16 @@ h1 {
   width: 100%;
   max-width: 100vw;
   scroll-snap-type: x mandatory;
+
+  scrollbar-width: none; /* Firefox */
+}
+
+.carousel:hover {
+  scroll-behavior: auto;
+}
+
+.carousel::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
 
 .carousel-item {
@@ -137,4 +147,3 @@ footer {
   .carousel-item { width: 180px; height: 220px; }
   .carousel-item img { height: 160px; }
 }
-
